sort of fixed incorrectArray for letters guessed and adjusted css so content doesn't move around too much when incorrectArray starts to fill in

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /*pseudo code background image opacity to make letters easier to read*/
+/*when guesses remaining entered, content uncenters itself, background shifts.... need to fix*/
 
 body {
     background-image: url("../images/background.jpeg");
@@ -40,5 +41,10 @@ p {
 .main {
     border: 1px solid #f3f0f0fb;
     padding-top: 40px;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
+}
+
+
+.container {
+    justify-content: center;
 }
